Lots of changes:  - Changed overall page styles so windows aligned better  - Changed filter so you can choose not to see auto-generated files  - Fixed a bug where tables in results missed a td  - Styled and rewrote "no results"-text to be more helpful

--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -19,6 +19,13 @@
   border-color: white;
 }
 
+.categoryHeader span {
+  font-weight: normal;
+  font-style: italic;
+  font-size: 15px;
+  margin-left: 5px;
+}
+
 .categoryHeader:hover {
   background-color: #4ea3fd;
   cursor: pointer;
@@ -31,7 +38,6 @@
 .categoryContent table {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed;
 }
 
 .categoryContent tr:nth-child(odd) {
