--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -72,7 +72,7 @@ header {
 }
 
 .filterSelect {
-  width: 375px;
+  width: 410px;
   display: block;
   float: left;
   margin: 0 40px 10px 0;
