--- a/src/styles.css
+++ b/src/styles.css
@@ -16,20 +16,19 @@
 }
 
 .mainWindow {
-  width: 100%;
-  float: left;
 }
 
 .leftMenu {
   float:left;
   width: 248px;
   margin-top: 1px;
+  margin-right: 15px;
 }
 
 .prototypeWindow {
   overflow: auto;
-  min-height: 600px;
-  margin: 10px 20px 0 20px;
+  min-height: 937px;
+  margin: 10px 15px 0 0;
   background-color: #ffffff;
   border: 2px solid #ECECEC;
 }
